# widemine

./: .gitignore  CLAUDE.md  LICENSE-COMMERCIAL.md  README.md  pyproject.toml
.plan/claude-detail-popup-content-design/: index.md
.plan/claude-detail-popup-content-design/agent-name/: raw_event.md
.plan/claude-detail-popup-content-design/ai-title/: raw_event.md
.plan/claude-detail-popup-content-design/assistant/: message.md  reasoning.md  tool_call.md
.plan/claude-detail-popup-content-design/attachment/: agent_listing_delta.md  auto_mode.md  auto_mode_exit.md  command_permissions.md  compact_file_reference.md  date_change.md  deferred_tools_delta.md  edited_text_file.md  file.md  (+19 more)
.plan/waterfall-message-card-navigation-design/: index.md
app/: __init__.py  __main__.py  capsules.py  claude_parser.py  claude_store.py  config.py  main.py  models.py  opencode_store.py  problem_detector.py  session_index.py  slim_export.py
app/templates/: conversation.html  dashboard.html  portfolio.html
docs/: design-system.md  reference-interaction-test-plan.md
scripts/: claude_transcript_scan.py  compile_claude_message_type_design.py  scan_claude_message_kinds.py  scan_claude_message_shapes.py  scan_claude_system_messages.py  validate_browser.py  validate_reference_interaction_plan.py
tests/: conftest.py  test_compile_claude_message_type_design.py  test_malformed_and_routes.py  test_opencode_store.py  test_scan_claude_message_kinds.py  test_scan_claude_message_shapes.py  test_scan_claude_system_messages.py  test_session_index.py  test_store_parser.py  test_timeline_api.py
(+80 files in other folders)
