[project]
name = "widemine"
version = "0.1.0"
description = "Cross-examine coding-agent sessions: timelines, transcripts, and (eventually) agent-as-judge evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "playwright>=1.60.0",
    "pytest>=8.0.0",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 96
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
